src/objects/Registration__c.object
<CustomObject>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Coordinator_Email__c</fullName>
        <label>Clinical Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Clinical_Coordinator_Fax__c</fullName>
        <label>Clinical Coordinator Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Clinical_Coordinator_Phone__c</fullName>
        <label>Clinical Coordinator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Clinical_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you doesn&apos;t found clinical coordinator in lookup list then click on &quot;New&quot; button in lookup.</inlineHelpText>
        <label>Clinical Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations (Clinical Coordinator)</relationshipLabel>
        <relationshipName>ClinicalCoordinator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_of_birth__c</fullName>
        <label>Country of birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIPPA_Consent_Date__c</fullName>
        <label>HIPPA Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRB_Approval_Date__c</fullName>
        <label>IRB Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISPY2_Subject_Id__c</fullName>
        <label>ISPY2 Subject Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Id__c</fullName>
        <formula>Patient__r.Institution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_readOnly__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsCaTissueDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCaTissueDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsIntegrationSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsIntegrationSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Registrations (Lab)</relationshipLabel>
        <relationshipName>Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oncologist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you doesn&apos;t found oncologist in lookup list then click on &quot;New&quot; button in lookup.</inlineHelpText>
        <label>Oncologist</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Registration__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Initials__c</fullName>
        <label>Patient Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreEligibility_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PreEligibility Checklist</label>
        <referenceTo>PreEligibility_Checklist__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radiology_Coordinator_Email__c</fullName>
        <label>Radiology Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Radiology_Coordinator_Fax__c</fullName>
        <label>Radiology Coordinator Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Radiology_Coordinator_Phone__c</fullName>
        <label>Radiology Coordinator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Radiology_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you doesn&apos;t found radiology coordinator in lookup list then click on &quot;New&quot; button in lookup.</inlineHelpText>
        <label>Radiology Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations (Radiology Coordinator)</relationshipLabel>
        <relationshipName>RadiologyCoordinator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screening_Informed_Consent_Date__c</fullName>
        <label>Screening Informed Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surgeon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you doesn&apos;t found surgeon in lookup list then click on &quot;New&quot; button in lookup.</inlineHelpText>
        <label>Surgeon</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations (Surgeon)</relationshipLabel>
        <relationshipName>Surgeon</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is need for SignAndSubmit button which is using this id for approval.</description>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_Oncologist__c</fullName>
        <label>pg_Oncologist</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_Surgeon__c</fullName>
        <label>pg_Surgeon</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_clinicalCoordname__c</fullName>
        <label>pg_clinicalCoordname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_radioCoordname__c</fullName>
        <label>pg_radioCoordname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_registration_Id__c</fullName>
        <label>pg_registration_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_status__c</fullName>
        <label>pg_status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_studyCoordname__c</fullName>
        <label>pg_studyCoordname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Registration</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IRB_Approval_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>IRB_Approval_Date__c</errorDisplayField>
        <errorMessage>Date can&apos;t be in future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Future_Date_HIPPA</fullName>
        <active>true</active>
        <errorConditionFormula>HIPPA_Consent_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>HIPPA_Consent_Date__c</errorDisplayField>
        <errorMessage>Date can&apos;t be in future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Future_Date_Registration</fullName>
        <active>true</active>
        <errorConditionFormula>Registration_Date__c  &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Registration_Date__c</errorDisplayField>
        <errorMessage>Date can&apos;t be in future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Future_Date_Screening_consent_date</fullName>
        <active>true</active>
        <errorConditionFormula>Screening_Informed_Consent_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Screening_Informed_Consent_Date__c</errorDisplayField>
        <errorMessage>Date can&apos;t be in future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Status_Is_Complet_HIPPA_Date_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Completed&quot;) , ISBLANK( HIPPA_Consent_Date__c) )</errorConditionFormula>
        <errorDisplayField>HIPPA_Consent_Date__c</errorDisplayField>
        <errorMessage>HIPPA Consent Date field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Status_Is_Complete_IRB_Date_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Completed&quot;) , ISBLANK( IRB_Approval_Date__c ) )</errorConditionFormula>
        <errorDisplayField>IRB_Approval_Date__c</errorDisplayField>
        <errorMessage>IRB Approval Date field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Status_Is_Complete_Scre_Date_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Completed&quot;) , ISBLANK( Screening_Informed_Consent_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Screening_Informed_Consent_Date__c</errorDisplayField>
        <errorMessage>Screening Informed Consent Date field is required.</errorMessage>
    </validationRules>
</CustomObject>